--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "git add . && git commit -m 'bug fix' && git push && npm run build && gh-pages -d build"
+    "deploy": "git add . && git commit -m 'bug fix' && git push && npm run build && gh-pages -d build",
+    "fixBranchAlreadyExist": "rm -rf node_modules/gh-pages/.cache"
   },
   "eslintConfig": {
     "extends": "react-app"
