--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fattahmuhyiddeen.github.io/public/forgotpassword/",
+  "homepage": "https://fattahmuhyiddeen.github.io/reset-password",
   "dependencies": {
     "query-string": "^6.2.0",
     "react": "^16.6.0",
